--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,6 @@
-
-/* 
-
-    You can write your own styles here...
+.containerSize {
+    width: 10rem;
+    height: 18rem;
+    border-radius: 2rem;
     
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
